--- a/src/common/views/modifierswidget.ui
+++ b/src/common/views/modifierswidget.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>ModifiersWidget</class>
  <widget class="QWidget" name="ModifiersWidget">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>45</width>
+    <height>54</height>
+   </rect>
+  </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
