--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -39,5 +39,6 @@
         <file>img16x16/cell_edit.png</file>
         <file>img16x16/key_bindings.png</file>
         <file>img16x16/move.png</file>
+        <file>img16x16/window_nofullscreen.png</file>
     </qresource>
 </RCC>
