localize, tab orders

--- a/src/common/views/programlist.ui
+++ b/src/common/views/programlist.ui
@@ -19,6 +19,9 @@
   <property name="windowTitle">
    <string notr="true">Form</string>
   </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <property name="spacing">
     <number>0</number>
