--- a/src/common/views/buttonswidget.ui
+++ b/src/common/views/buttonswidget.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>ButtonsWidget</class>
  <widget class="QWidget" name="ButtonsWidget">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>48</width>
+    <height>90</height>
+   </rect>
+  </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
     <horstretch>0</horstretch>
@@ -16,6 +24,9 @@
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(255, 255, 127);</string>
+  </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
