--- a/src/common/views/keybindingdialog.ui
+++ b/src/common/views/keybindingdialog.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Keyboard mapping</string>
   </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="spacing">
     <number>0</number>
