--- a/src/common/views/modifierswidget.ui
+++ b/src/common/views/modifierswidget.ui
@@ -28,6 +28,9 @@
   <property name="styleSheet">
    <string notr="true">background-color: rgb(255, 255, 127);</string>
   </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>0</number>
